// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProfileAvatar > should match snapshot with fallback 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span>
        <span
          class="relative shrink-0 overflow-hidden flex rounded-full bg-primary h-[48px] w-[48px]"
        >
          <span
            class="rounded-full flex h-full w-full items-center justify-center bg-primary text-primary-foreground text-xl"
          >
            M
          </span>
        </span>
      </span>
    </div>
  </body>,
  "container": <div>
    <span>
      <span
        class="relative shrink-0 overflow-hidden flex rounded-full bg-primary h-[48px] w-[48px]"
      >
        <span
          class="rounded-full flex h-full w-full items-center justify-center bg-primary text-primary-foreground text-xl"
        >
          M
        </span>
      </span>
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ProfileAvatar > should match snapshot with image 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span>
        <span
          class="relative shrink-0 overflow-hidden flex rounded-full bg-primary h-[48px] w-[48px]"
        >
          <img
            alt=""
            data-nimg="1"
            decoding="async"
            fetchpriority="high"
            height="48"
            src="/_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab6775700000ee8503aef823b019723735326905&w=96&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab6775700000ee8503aef823b019723735326905&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab6775700000ee8503aef823b019723735326905&w=96&q=75 2x"
            style="color: transparent;"
            width="48"
          />
        </span>
      </span>
    </div>
  </body>,
  "container": <div>
    <span>
      <span
        class="relative shrink-0 overflow-hidden flex rounded-full bg-primary h-[48px] w-[48px]"
      >
        <img
          alt=""
          data-nimg="1"
          decoding="async"
          fetchpriority="high"
          height="48"
          src="/_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab6775700000ee8503aef823b019723735326905&w=96&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab6775700000ee8503aef823b019723735326905&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab6775700000ee8503aef823b019723735326905&w=96&q=75 2x"
          style="color: transparent;"
          width="48"
        />
      </span>
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ProfileAvatar > should match snapshot with size lg 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span>
        <span
          class="relative shrink-0 overflow-hidden flex rounded-full bg-primary h-[128px] w-[128px]"
        >
          <span
            class="rounded-full flex h-full w-full items-center justify-center bg-primary text-primary-foreground text-5xl"
          >
            M
          </span>
        </span>
      </span>
    </div>
  </body>,
  "container": <div>
    <span>
      <span
        class="relative shrink-0 overflow-hidden flex rounded-full bg-primary h-[128px] w-[128px]"
      >
        <span
          class="rounded-full flex h-full w-full items-center justify-center bg-primary text-primary-foreground text-5xl"
        >
          M
        </span>
      </span>
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ProfileAvatar > should match snapshot with size sm 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span>
        <span
          class="relative shrink-0 overflow-hidden flex rounded-full bg-primary h-[48px] w-[48px]"
        >
          <span
            class="rounded-full flex h-full w-full items-center justify-center bg-primary text-primary-foreground text-xl"
          >
            M
          </span>
        </span>
      </span>
    </div>
  </body>,
  "container": <div>
    <span>
      <span
        class="relative shrink-0 overflow-hidden flex rounded-full bg-primary h-[48px] w-[48px]"
      >
        <span
          class="rounded-full flex h-full w-full items-center justify-center bg-primary text-primary-foreground text-xl"
        >
          M
        </span>
      </span>
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
